--- a/code/Relationship between income and SAT and ACT scores.ipynb
+++ b/code/Relationship between income and SAT and ACT scores.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "As part of the ad-hoc review of the education system, we (USA Ministry of Education) would like to find out if the current education system in the USA is fair and if not, what can we do to improve the education system. We hypothesize that students from higher household income have better performances on the SAT and ACT, compared to students from lower household income. \n",
     "\n",
-    "This project seeks to identify if a relationship exists between student annual household income and SAT/ACT scores; and if these tests are a accurate measure of a students' abillity or if there exist a biasness due to socioeconomic differences."
+    "This project seeks to identify if a relationship exists between student annual household income and SAT/ACT scores; and if these tests are an accurate measure of a students' abillity or if there exist a biasness due to socioeconomic differences."
    ]
   },
   {
@@ -2809,7 +2809,7 @@
     "\n",
     "**Recommendations:**\n",
     "\n",
-    "- The ACT system should be abolished and students should take SAT as part of the college entrance examinations. This will allow students from a less wealthy family gets to go to the school of their choice if they have the academic ability (scored via SAT). \n",
+    "- The ACT system should be abolished and students should take SAT as part of the college entrance examinations. This will allow students from a less well-to-do family to go to the school of their choice if they have the academic ability (scored via SAT). \n",
     "\n",
     "- Financial support could also be given to students from less wealthy families who are taking the ACT to support them and help them in their ACT scores.\n"
    ]
