Update Relationship between income and SAT and ACT scores.ipynb

--- a/code/Relationship between income and SAT and ACT scores.ipynb
+++ b/code/Relationship between income and SAT and ACT scores.ipynb
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Research has repeatedly proved that students from wealthy families score higher on the SAT and ACT, compared to students from low-income families. According to a 2015 analysis by Inside Higher Ed, the lowest average scores for each part of the SAT came from students with less than \\$20,000 in family income. The highest scores came from those with more than \\\\$200,000 in family income ([*source*](https://www.cnn.com/2020/04/14/us/coronavirus-colleges-sat-act-test-trnd/index.html))."
+    "Research has repeatedly proved that students from wealthy families score higher on the SAT and ACT, compared to students from low-income families. According to a 2015 analysis by Inside Higher Ed, the lowest average scores for each part of the SAT came from students with less than \\$20,000 in family income. The highest scores came from those with more than \\$200,000 in family income ([*source*](https://www.cnn.com/2020/04/14/us/coronavirus-colleges-sat-act-test-trnd/index.html))."
    ]
   },
   {
